# z-MPC-Protocol

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  SPONSORSHIP.md  z-MPC_Laurent_Series_Secret_Sharing.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: error.rs  laurent.rs  lib.rs  main.rs  network.rs  pedersen.rs  types.rs  zkp.rs
src/curve/: ed25519.rs  mod.rs  p256.rs  secp256k1.rs
tests/: integration_test.rs
