[package]
name = "z-mpc"
version = "0.1.0"
edition = "2021"
authors = ["z-MPC Team"]
description = "Laurent Series based One-Round Secret Sharing with ZK-Proof for distributed signing"
license = "MIT"
repository = "https://github.com/z-mpc/z-mpc"
keywords = ["mpc", "cryptography", "zero-knowledge", "secret-sharing", "laurent-series"]
categories = ["cryptography", "algorithms"]

[dependencies]
# Curve libraries
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
curve25519-dalek = { version = "4.1", features = ["u64_backend"] }

# Cryptographic primitives
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rand_core = "0.6"

# Zero-knowledge proof
merlin = "3.0"
bulletproofs = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WebAssembly support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Hex encoding/decoding
hex = "0.4"

# Get random for WASM
getrandom = { version = "0.2", features = ["std"] }

# Network communication
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
hyper = { version = "1.0", features = ["full"] }

# Async runtime
async-trait = "0.1"
futures = "0.3"

# Message passing
crossbeam-channel = "0.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
tokio-test = "0.4"

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "z_mpc"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
wasm = ["getrandom/js"]
network = ["tokio", "axum", "hyper"] 